fix: location of image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="center">
     <div class="center image">
-        <img src="picture/photo.jpg" alt="photo">
+        <img src="assets/img/photo.jpg" alt="photo">
     </div>
     <div class="center">
         <ol>
