--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+  <header class="header"></header>
+  <main class="main"></main>
+  <footer class="footer"></footer>
   <div class="center">
     <div class="center image">
         <img src="assets/img/photo.jpg" alt="photo">
