--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <!-- External CSS -->
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="assets/svg/favicon.ico">
 </head>
 
 <body>
