fix: put footer at the bottom

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body>
   <header class="header"></header>
   <main class="main"></main>
-  <footer class="footer"></footer>
   <div class="center">
     <div class="center image">
         <img src="assets/img/photo.jpg" alt="photo">
@@ -95,5 +94,8 @@
         </ol>
     </div>
   </div>
+  <footer class="footer">
+    &copy; 2022 majustman
+  </footer>
 </body>
 </html>
