--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li><h2>Samat Tulepbayev</h2></li>
 
           <li>
-            <div class="contacts">
+            <div id="contacts" class="contacts">
               <ul>
                 <li><b>Cell Phone: </b>+7-777-752-38-34</li>
                 <li><b>Email: </b>samatt90@gmail.com</li>
@@ -52,20 +52,27 @@
           </li>
 
           <li>
-            <p><b>Goal </b>for now is to learn coding (backend, frontend) to become fullstack developer.</p>
-            <p><b>Priorities </b>are practical learning, become a member of coding socium in order to learn fast.</p>
-            <p><b>Advantage </b>I have a few experience in coding. It should make the process of learning easier for me.</p>
+            <section id="summary" class="summary">
+              <p><b>Goal </b>for now is to learn coding (backend, frontend) to become fullstack developer.</p>
+              <p><b>Priorities </b>are practical learning, become a member of coding socium in order to learn fast.</p>
+              <p><b>Advantage </b>I have a few experience in coding. It should make the process of learning easier for me.</p>
+            </section>
           </li>
 
-          <li><b>Skills </b>Basic knoweldge in Golang, HTML, CSS, JS. GIT, Github.</li>
+          <li>
+            <section id="skills" class="skills">
+              <b>Skills </b>Basic knoweldge in Golang, HTML, CSS, JS. GIT, Github.
+            </section>
+          </li>
 
           <li>
-            <p><b>Example of code</b></p>
+            <section id="code" class="code">
+              <p><b>Example of code</b></p>
 
-            <p><b>Golang</b></p>
+              <p><b>Golang</b></p>
 
-            <pre>
-              <code class="container code">
+              <pre>
+                <code class="container code">
         func (s *server) newClient(conn net.Conn) {
             log.Printf("new client has connected: %s", conn.RemoteAddr().String())
 
@@ -76,40 +83,55 @@
             }
             c.readInput()
         }
-              </code>
-            </pre>
+                </code>
+              </pre>
 
-            <p><b>JavaScript</b></p>
+              <p><b>JavaScript</b></p>
 
-            <pre>
-              <code class="container">
+              <pre>
+                <code class="container">
         function multiply(a, b){
             return a * b
         }
-              </code>
-            </pre>
-          </li>
-
-          <li><b>Work experience </b>
-                 Have experience as Backend Developer on Golang for half a year.
-                 Project was a telegramBot on private repository on GitLab.
+                </code>
+              </pre>
+            </section> 
           </li>
 
           <li>
-            <p><b>Education</b></p>
-
-            <p><i>Moscow Aviation Institute </i>bachelor degree in
-              <i>Automated systems of information processing</i>
-            </p>
-            <p><a href="https://alem.school/">Alem school</a> student since May 2020</p>
-            <p><a href="https://www.udemy.com/course/html-tutorial/">
-                    How to Create A Website: An HTML Tutorial and CSS Tutorial
-                </a> 95% complete</p>
-            <p><a href="https://www.udemy.com/course/go-programming-language/">
-                        Web Development w/ Google’s Go (golang) Programming Language</a> 45% complete</p>
+            <section id="courses" class="courses">
+              <p>Courses</p>
+              <p><a href="https://alem.school/">Alem school</a> student since May 2020</p>
+              <p><a href="https://www.udemy.com/course/html-tutorial/">
+                      How to Create A Website: An HTML Tutorial and CSS Tutorial
+                  </a> 95% complete</p>
+              <p><a href="https://www.udemy.com/course/go-programming-language/">
+                          Web Development w/ Google’s Go (golang) Programming Language</a> 45% complete</p>
+            </section>
           </li>
 
-          <li><b>English language </b>Intermediate level, IELTS 6.5 (expired)</li>
+          <li>
+            <section id="projects" class="projects">
+              <b>Work experience </b>
+                 Have experience as Backend Developer on Golang for half a year.
+                 Project was a telegramBot on private repository on GitLab.
+            </section>
+          </li>
+
+          <li>
+            <section id="education" class="education">
+              <p><b>Education</b></p>
+  
+              <p><i>Moscow Aviation Institute </i>bachelor degree in
+                <i>Automated systems of information processing</i>
+              </p>
+            </section>
+          </li>
+
+          <li>
+            <section id="english" class="english">
+              <b>English language </b>Intermediate level, IELTS 6.5 (expired)</li>
+            </section>
         </ol>
       </div>
     </div>
