--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </section>
 
       <section class="section section-contacts" id="contacts">
-        <h2 class=".section-title">Contacts</h2>
+        <h2 class="section-title">Contacts</h2>
         <ul>
           <li><b>Cell Phone: </b>+7-777-752-38-34</li>
             <li><b>Email: </b>samatt90@gmail.com</li>
@@ -50,19 +50,19 @@
       </section>
 
       <section class="section section-summary" id="summary">
-        <h2 class=".section-title">Summary</h2>
+        <h2 class="section-title">Summary</h2>
         <p><b>Goal </b>for now is to learn coding (backend, frontend) to become fullstack developer.</p>
         <p><b>Priorities </b>are practical learning, become a member of coding socium in order to learn fast.</p>
         <p><b>Advantage </b>I have a few experience in coding. It should make the process of learning easier for me.</p>
       </section>
 
       <section class="section section-skills" id="skills">
-        <h2 class=".section-title">Skills</h2>
+        <h2 class="section-title">Skills</h2>
         Basic knoweldge in Golang, HTML, CSS, JS. GIT, Github.
       </section>
 
       <section class="section section-code" id="code">
-        <h2 class=".section-title">Code</h2>
+        <h2 class="section-title">Code</h2>
         <p><b>Example of code</b></p>
 
         <p><b>Golang</b></p>
@@ -94,7 +94,7 @@
       </section>
 
       <section class="section section-courses" id="courses">
-        <h2 class=".section-title">Courses</h2>
+        <h2 class="section-title">Courses</h2>
         <p><a href="https://alem.school/">Alem school</a> student since May 2020</p>
         <p>
           <a href="https://www.udemy.com/course/html-tutorial/">
@@ -109,13 +109,13 @@
       </section>
 
       <section class="section section-projects" id="projects">
-        <h2 class=".section-title">Work experience</h2>
+        <h2 class="section-title">Work experience</h2>
           Have experience as Backend Developer on Golang for half a year.
           Project was a telegramBot on private repository on GitLab.
       </section>
 
       <section class="section section-education" id="education">
-        <h2 class=".section-title">Education</h2>
+        <h2 class="section-title">Education</h2>
   
         <p><i>Moscow Aviation Institute </i>bachelor degree in
           <i>Automated systems of information processing</i>
@@ -123,7 +123,7 @@
       </section>
 
       <section class="section section-english" id="english">
-        <h2 class=".section-title">English</h2>
+        <h2 class="section-title">English</h2>
         Intermediate level, IELTS 6.5 (expired)
       </section>
     </div>
