fix: profile style

--- a/index.html
+++ b/index.html
@@ -35,8 +35,15 @@
     <div class="container main-container">
 
       <section class="section section-profile" id="profile">
-        <img src="assets/img/photo.jpg" alt="photo">
-        <h1 class="section-title">Samat Tulepbayev</h1>
+        <div class="container container-profile">
+          <img src="assets/img/photo.jpg" alt="photo">
+        </div>
+        <div class="container container-profile">
+          <div class="profile-titles">
+            <h1 class="section-title">Samat Tulepbayev</h1>
+            <h3 class="subtitle">Junior Fullstack Developer</h3>
+          </div>
+        </div>
       </section>
 
       <section class="section section-contacts" id="contacts">
