--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
     </div>
   </main>
   <footer class="footer">
-    <div class="container">
-      &copy; 2022 majustman
+    <p>&copy; 2022 majustman</p>
+    <div class="footer-location">
+      <img src="/assets/img/navigation.png" alt="location" class="footer-location-img">
+      <p>Kazakhstan, Astana</p>
     </div>
   </footer>
 </body>
