--- a/index.html
+++ b/index.html
@@ -48,12 +48,24 @@
 
       <section class="section section-contacts" id="contacts">
         <h2 class="section-title">Contacts</h2>
-        <ul>
-          <li><b>Cell Phone: </b>+7-777-752-38-34</li>
-            <li><b>Email: </b>samatt90@gmail.com</li>
-            <li><b>GITHUB: </b>majustman</li>
-            <li><b>Discord: </b>majustman</li>
-          </ul>
+        <ul class="contacts-list">
+          <li>
+            <img src="assets/img/phone.png" alt="phone" class="contacts-img">
+            <strong>Cell Phone: </strong>+7-777-752-38-34
+          </li>
+          <li>
+            <img src="assets/img/email.png" alt="email" class="contacts-img">
+            <strong>Email: </strong>samatt90@gmail.com
+          </li>
+          <li>
+            <img src="https://github.githubassets.com/favicons/favicon.png" alt="github logo" class="contacts-img">
+            <strong>GITHUB: </strong>majustman
+          </li>
+          <li>
+            <img src="assets/img/discord.png" alt="discord logo" class="contacts-img">
+            <strong>Discord: </strong>majustman
+          </li>
+        </ul>
       </section>
 
       <section class="section section-summary" id="summary">
