--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
       <section class="section section-contacts" id="contacts">
         <h2 class="section-title">Contacts</h2>
         <ul class="contacts-list">
-          <li>
+          <li class="contacts-item">
             <img src="assets/img/phone.png" alt="phone" class="contacts-img">
-            <strong>Cell Phone: </strong>+7-777-752-38-34
+            <span class="contacts-text">+7-777-752-38-34</span>
           </li>
-          <li>
+          <li class="contacts-item">
             <img src="assets/img/email.png" alt="email" class="contacts-img">
-            <strong>Email: </strong>samatt90@gmail.com
+            <span class="contacts-text">samatt90@gmail.com</span>
           </li>
-          <li>
+          <li class="contacts-item">
             <img src="https://github.githubassets.com/favicons/favicon.png" alt="github logo" class="contacts-img">
-            <strong>GITHUB: </strong>majustman
+            <span class="contacts-text">majustman</span>
           </li>
-          <li>
+          <li class="contacts-item">
             <img src="assets/img/discord.png" alt="discord logo" class="contacts-img">
-            <strong>Discord: </strong>majustman
+            <span class="contacts-text">majustman</span>
           </li>
         </ul>
       </section>
