--- a/index.html
+++ b/index.html
@@ -70,14 +70,18 @@
 
       <section class="section section-summary" id="summary">
         <h2 class="section-title">Summary</h2>
-        <p><b>Goal </b>for now is to learn coding (backend, frontend) to become fullstack developer.</p>
-        <p><b>Priorities </b>are practical learning, become a member of coding socium in order to learn fast.</p>
-        <p><b>Advantage </b>I have a few experience in coding. It should make the process of learning easier for me.</p>
+        <p><strong>Goal </strong>for now is to learn coding (backend, frontend) to become fullstack developer.</p>
+        <p><strong>Priorities </strong>are practical learning, become a member of coding socium in order to learn fast.</p>
+        <p><strong>Advantage </strong>I have a few experience in coding. It should make the process of learning easier for me.</p>
       </section>
 
       <section class="section section-skills" id="skills">
         <h2 class="section-title">Skills</h2>
-        Basic knoweldge in Golang, HTML, CSS, JS. GIT, Github.
+        <ul class="skills-list">
+          <li class="skills-item"><strong>Programming languages:</strong> Golang, JavaScript, HTML, CSS</li>
+          <li class="skills-item"><strong>Version control:</strong> GIT, Github, Gitlab</li>
+          <li class="skills-item"><strong>Technologies:</strong> Docker</li>
+        </ul>
       </section>
 
       <section class="section section-code" id="code">
