--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <section class="section section-code" id="code">
         <h2 class="section-title">Code</h2>
 
-        <p><b>Golang</b></p>
+        <p><strong>Golang</strong></p>
 
         <pre>
           <code class="container code">
