--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
 
       <section class="section section-courses" id="courses">
         <h2 class="section-title">Courses</h2>
-        <p><a href="https://alem.school/" class="link">Alem school</a> student since May 2020</p>
+        <p><a href="https://alem.school/" class="link">Alem school</a></p>
         <p>
           <a href="https://www.udemy.com/course/html-tutorial/" class="link">
             How to Create A Website: An HTML Tutorial and CSS Tutorial
-          </a> 95% complete
+          </a>
         </p>
         <p>
           <a href="https://www.udemy.com/course/go-programming-language/" class="link">
             Web Development w/ Google’s Go (golang) Programming Language
-          </a> 45% complete
+          </a>
         </p>
       </section>
 
