--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
   </main>
   <footer class="footer">
-    <p>&copy; 2022 majustman</p>
+    <p class="footer-paragraph">&copy; 2022 majustman</p>
     <div class="footer-location">
       <img src="/assets/img/navigation.png" alt="location" class="footer-location-img">
       <p>Kazakhstan, Astana</p>
