fix: add closing pre tag

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 commands: s.commands,
             }
           </code>
+        </pre>
       </section>
 
       <section class="section section-courses" id="courses">
