--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <div class="container">
       <nav class="nav">
         <ul class="nav-list">
-          <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-          <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-          <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-          <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
-          <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
-          <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-          <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-          <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contacts">Contacts</a></li>
+          <li class="nav-item"><a class="nav-link" href="#summary">Summary</a></li>
+          <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+          <li class="nav-item"><a class="nav-link" href="#code">Code</a></li>
+          <li class="nav-item"><a class="nav-link" href="#courses">Courses</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+          <li class="nav-item"><a class="nav-link" href="#english">English</a></li>
         </ul>
       </nav>
     </div>
@@ -50,19 +50,19 @@
         <h2 class="section-title">Contacts</h2>
         <ul class="contacts-list">
           <li class="contacts-item">
-            <img src="assets/img/phone.png" alt="phone" class="contacts-img">
+            <img class="contacts-img" src="assets/img/phone.png" alt="phone">
             <span class="contacts-text">+7-777-752-38-34</span>
           </li>
           <li class="contacts-item">
-            <img src="assets/img/email.png" alt="email" class="contacts-img">
+            <img class="contacts-img" src="assets/img/email.png" alt="email">
             <span class="contacts-text">samatt90@gmail.com</span>
           </li>
           <li class="contacts-item">
-            <img src="https://github.githubassets.com/favicons/favicon.png" alt="github logo" class="contacts-img">
+            <img class="contacts-img" src="https://github.githubassets.com/favicons/favicon.png" alt="github logo">
             <span class="contacts-text">majustman</span>
           </li>
           <li class="contacts-item">
-            <img src="assets/img/discord.png" alt="discord logo" class="contacts-img">
+            <img class="contacts-img" src="assets/img/discord.png" alt="discord logo">
             <span class="contacts-text">majustman</span>
           </li>
         </ul>
@@ -102,14 +102,14 @@
 
       <section class="section section-courses" id="courses">
         <h2 class="section-title">Courses</h2>
-        <p><a href="https://alem.school/" class="link">Alem school</a></p>
+        <p><a class="link" href="https://alem.school/">Alem school</a></p>
         <p>
-          <a href="https://www.udemy.com/course/html-tutorial/" class="link">
+          <a class="link" href="https://www.udemy.com/course/html-tutorial/">
             How to Create A Website: An HTML Tutorial and CSS Tutorial
           </a>
         </p>
         <p>
-          <a href="https://www.udemy.com/course/go-programming-language/" class="link">
+          <a class="link" href="https://www.udemy.com/course/go-programming-language/">
             Web Development w/ Google’s Go (golang) Programming Language
           </a>
         </p>
@@ -138,7 +138,7 @@
   <footer class="footer">
     <p class="footer-paragraph">&copy; 2022 majustman</p>
     <div class="footer-location">
-      <img src="/assets/img/navigation.png" alt="location" class="footer-location-img">
+      <img class="footer-location-img" src="/assets/img/navigation.png" alt="location">
       <p>Kazakhstan, Astana</p>
     </div>
   </footer>
