--- a/index.html
+++ b/index.html
@@ -136,11 +136,15 @@
     </div>
   </main>
   <footer class="footer">
-    <p class="footer-paragraph">&copy; 2022 majustman</p>
-    <div class="footer-location">
-      <img class="footer-location-img" src="/assets/img/navigation.png" alt="location">
-      <p>Kazakhstan, Astana</p>
-    </div>
+      <p>&copy; 2022</p>
+      <a class="footer-link link" href="https://github.com/majustman">majustman</a>
+      <div class="footer-container">
+        <img class="footer-location-img" src="/assets/img/navigation.png" alt="location">
+        <p>Kazakhstan, Astana</p>
+        </div>
+      <a class="footer-link" href="https://rs.school/js/">
+        <img src="https://rs.school/images/rs_school_js.svg" alt="rsschool logo" width="128" height="64">
+      </a>
   </footer>
 </body>
 </html>
