--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
 
       <section class="section section-courses" id="courses">
         <h2 class="section-title">Courses</h2>
-        <p><a class="link" href="https://alem.school/">Alem school</a></p>
+        <p><a class="main-link link" href="https://alem.school/">Alem school</a></p>
         <p>
-          <a class="link" href="https://www.udemy.com/course/html-tutorial/">
+          <a class="main-link link" href="https://www.udemy.com/course/html-tutorial/">
             How to Create A Website: An HTML Tutorial and CSS Tutorial
           </a>
         </p>
         <p>
-          <a class="link" href="https://www.udemy.com/course/go-programming-language/">
+          <a class="main-link link" href="https://www.udemy.com/course/go-programming-language/">
             Web Development w/ Google’s Go (golang) Programming Language
           </a>
         </p>
