fix: add projects

--- a/index.html
+++ b/index.html
@@ -116,9 +116,12 @@
       </section>
 
       <section class="section section-projects" id="projects">
-        <h2 class="section-title">Work experience</h2>
-          Have experience as Backend Developer on Golang for half a year.
-          Project was a telegramBot on private repository on GitLab.
+        <h2 class="section-title">Projects</h2>
+          <ul class="projects-list">
+            <li class="projects-item">
+              <a class="link main-link" href="https://github.com/majustman/rsschool-cv">CV</a>
+            </li>
+          </ul>
       </section>
 
       <section class="section section-education" id="education">
