fix: add links mailto&tel to contacts

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         <ul class="contacts-list">
           <li class="contacts-item">
             <img class="contacts-img" src="assets/img/phone.png" alt="phone">
-            <span class="contacts-text">+7-777-752-38-34</span>
+            <a class="contacts-text link main-link" href="tel:+77777523834">+7-777-752-38-34</a>
           </li>
           <li class="contacts-item">
             <img class="contacts-img" src="assets/img/email.png" alt="email">
-            <span class="contacts-text">samatt90@gmail.com</span>
+            <a class="contacts-text link main-link" href="mailto:samatt90@gmail.com?subject=CV">samatt90@gmail.com</a>
           </li>
           <li class="contacts-item">
             <img class="contacts-img" src="https://github.githubassets.com/favicons/favicon.png" alt="github logo">
