refactor: add aditional info

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </li>
           <li class="contacts-item">
             <img class="contacts-img" src="assets/img/discord.png" alt="discord logo">
-            <span class="contacts-text">majustman</span>
+            <span class="contacts-text">samatt90#0431</span>
           </li>
         </ul>
       </section>
@@ -78,7 +78,7 @@
       <section class="section section-skills" id="skills">
         <h2 class="section-title">Skills</h2>
         <ul class="skills-list">
-          <li class="skills-item"><strong>Programming languages:</strong> Golang, JavaScript, HTML, CSS</li>
+          <li class="skills-item"><strong>Programming languages:</strong> Golang, JavaScript, HTML, CSS, SCSS</li>
           <li class="skills-item"><strong>Version control:</strong> GIT, Github, Gitlab</li>
           <li class="skills-item"><strong>Technologies:</strong> Docker</li>
         </ul>
@@ -111,6 +111,11 @@
         <p>
           <a class="main-link link" href="https://www.udemy.com/course/go-programming-language/">
             Web Development w/ Google’s Go (golang) Programming Language
+          </a>
+        </p>
+        <p>
+          <a class="main-link link" href="https://rs.school/js-stage0/">
+            RS School. JS Stage0
           </a>
         </p>
       </section>
