--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul class="contacts-list">
           <li class="contacts-item">
             <img class="contacts-img" src="assets/img/phone.png" alt="phone">
-            <a class="contacts-text link main-link" href="tel:+77777523834">+7-777-752-38-34</a>
+            <a class="contacts-text link main-link" href="tel:+77777523834">+7&#8209;777&#8209;752&#8209;38&#8209;34</a>
           </li>
           <li class="contacts-item">
             <img class="contacts-img" src="assets/img/email.png" alt="email">
@@ -59,7 +59,7 @@
           </li>
           <li class="contacts-item">
             <img class="contacts-img" src="https://github.githubassets.com/favicons/favicon.png" alt="github logo">
-            <span class="contacts-text">majustman</span>
+            <a class="contacts-text link main-link" href="https://github.com/majustman">majustman</a>
           </li>
           <li class="contacts-item">
             <img class="contacts-img" src="assets/img/discord.png" alt="discord logo">
